Fix icon spacing and size in menu

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,11 @@ blockquote > p {
   padding-top: 14px;
 }
 
+.widget_menu a .icon {
+  width: 1.25em;
+  font-size: 1.1875rem;
+}
+
 /* Lists. */
 
 #primary ul {
